--- a/.github/workflows/ACR-deploy.yml
+++ b/.github/workflows/ACR-deploy.yml
@@ -18,46 +18,40 @@ jobs:
       IMAGE_NAME: pen-match-v2-docker
       APP_SERVICE_NAME: pen-match-api-v2-app
       RESOURCE_GROUP: pen-match-api-v2
+      # Hardcode known ACR resource ID to avoid "name lookup" ambiguity
+      ACR_ID: /subscriptions/5ebfa7cd-3b83-4a77-8928-b5c5b92232f9/resourceGroups/pen-match-api-v2/providers/Microsoft.ContainerRegistry/registries/penmatchacr
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 1) OIDC login
       - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          # Keep this, but we will STILL force-set the subscription below
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # 2) Force subscription (this fixes "default subscription is another one")
-      - name: Force Azure subscription context
+      - name: Force subscription context
         shell: bash
         run: |
           set -euo pipefail
-          echo "Before set:"
-          az account show --query "{name:name,id:id,tenantId:tenantId}" -o jsonc
-
           az account set --subscription "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-
-          echo "After set:"
           az account show --query "{name:name,id:id,tenantId:tenantId}" -o jsonc
 
-      # 3) Guard: ensure ACR is in the subscription we expect (fail fast if not)
-      - name: Guard - confirm ACR is reachable in this subscription
+      - name: Debug - check ACR by resource ID (permission vs missing)
         shell: bash
         run: |
           set -euo pipefail
-          ACR_ID=$(az acr show -n "$ACR_NAME" --query id -o tsv)
-          echo "ACR_ID=$ACR_ID"
-          echo "$ACR_ID" | grep -q "/subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/" \
-            || (echo "ERROR: Wrong subscription context for this ACR" && exit 1)
+          echo "ACR_ID=${ACR_ID}"
+          az resource show --ids "${ACR_ID}" -o jsonc
 
-          az acr show -n "$ACR_NAME" --query "{name:name,loginServer:loginServer,resourceGroup:resourceGroup}" -o jsonc
+      - name: Get ACR login server from ARM (source of truth)
+        shell: bash
+        run: |
+          set -euo pipefail
+          az resource show --ids "${ACR_ID}" --query "properties.loginServer" -o tsv
 
-      # 4) Docker login to ACR using AAD access token (reliable in CI)
       - name: Docker login to ACR (AAD token)
         shell: bash
         run: |
@@ -67,7 +61,6 @@ jobs:
             -u 00000000-0000-0000-0000-000000000000 \
             -p "$TOKEN"
 
-      # 5) Build & push image
       - name: Build and push container image (:latest)
         shell: bash
         run: |
@@ -75,7 +68,6 @@ jobs:
           docker build -t "$ACR_LOGIN_SERVER/$IMAGE_NAME:latest" .
           docker push "$ACR_LOGIN_SERVER/$IMAGE_NAME:latest"
 
-      # 6) Restart App Service (so it pulls latest)
       - name: Restart App Service
         shell: bash
         run: |
